--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -27,6 +27,15 @@
                 </dl>
             </li>
             <li class="layui-nav-item">
+                <a href="javascript:;"><i class="iconfont">&#xe607;</i>分类管理</a>
+                <dl class="layui-nav-child">
+                    <dd><a href="javascript:;" data-url="/cate/list" data-id='3' data-text="分类管理"><span
+                                    class="l-line"></span>分类管理</a></dd>
+                    <dd><a href="javascript:;" data-url="/cate/add" data-id='8' data-text="添加分类"><span
+                                    class="l-line"></span>添加分类</a></dd>
+                </dl>
+            </li>
+            <li class="layui-nav-item">
                 <a href="javascript:;"><i class="iconfont">&#xe60c;</i>友情链接</a>
             </li>
             <li class="layui-nav-item">
