重置表和优化控制器逻辑

--- a/views/admin/article-add.html
+++ b/views/admin/article-add.html
@@ -34,7 +34,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">分类栏目：</label>
                         <div class="layui-input-block ">
-                            <select name="category"  lay-filter="status">
+                            <select name="articleCate"  lay-filter="status">
                                 <option value="">请选择分类栏目:</option>
                                     {{range .cates}}
                                         <option value="{{.Id}}" selected="">{{.TypeName}}</option>
