--- a/views/admin/cate-list.html
+++ b/views/admin/cate-list.html
@@ -16,7 +16,7 @@
         <form class="layui-form" action="">
             <div class="layui-form-item">
                 <div class="layui-inline tool-btn">
-                    <button class="layui-btn layui-btn-small layui-btn-normal addBtn" data-url="article-add.html"><i
+                    <button class="layui-btn layui-btn-small layui-btn-normal addBtn" data-url="/cate/add"><i
                                 class="layui-icon">&#xe654;</i></button>
                     <button class="layui-btn layui-btn-small layui-btn-danger delBtn" data-url="article-add.html"><i
                                 class="layui-icon">&#xe640;</i></button>
